cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("jsonio-${base}" "${source}")
    set_property(TARGET "jsonio-${base}" PROPERTY CXX_STANDARD 20)
    target_link_libraries("jsonio-${base}" PRIVATE "jsonio")
    add_test("jsonio-${base}" "jsonio-${base}")
endforeach()
